# crimson_logger

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
crimson_logger.egg-info/: requires.txt  top_level.txt
src/: async_writer.py  config_exception.py  crimson_config_parser.py  crimson_file_sink.py  crimson_formatter.py  crimson_log_config.py  crimson_logger.py  crimson_sink.py  crimson_writer.py  log_level.py  sync_writer.py  thread_model.py  write_mode.py
src/crimson_logger.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  db_config.txt  file_config.txt  test_classes.py  test_formatter.py  test_parser.py
