[project]
name = "crimson-logger"
version = "0.1.0"
description = "A lightweight, extensible logger with pluggable sinks and custom configuration."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Pragya Sinha", email = "150645714+pragya-rs13@users.noreply.github.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "wheel",
    "ruff",
    "black"
]


[project.urls]
Homepage = "https://github.com/pragya-rs13/crimson-logger"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
